[project]
name = "rag-agent"
version = "0.1.0"
description = "Local-first configurable RAG agent"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.73.0",
    "pinecone>=6.0.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    # Optional (Postgres)
    "psycopg2-binary>=2.9.10",
    # Ingestion dependencies
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "openpyxl>=3.1.5",
    # Dev tools
    "ruff>=0.5.7",
    "black>=24.8.0",
    "pytest>=8.3.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "routes",
    "services",
    "utils",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]
